<resources>
    <string name="app_name">ApolloMPOS</string>
    <string name="some_error">Please Contact ITD Administrator</string>
    <string name="url_error">Unable to communicate</string>
    <string name="label_setup_process">Setup Process</string>
    <string name="label_please_login_to_complete_theprocess">Please login to complete the process</string>
    <string name="label_search_pharmacy">Search pharmacy by location or pincode</string>
    <string name="label_setup">Setup</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_mobile">Mobile Number</string>
    <string name="label_next">Next</string>
    <string name="label_select_login_type">Select Login Type</string>
    <string name="none_found">No devices found</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="label_connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="label_bluetooth_conn_header_err">Failed connecting to Device</string>
    <string name="label_bluetooth_conn_err">Disconnect and connect again</string>
    <string name="label_span_desc">Desc: %1$s</string>
    <string name="label_span_artcode">Art Code: %1$s</string>
    <string name="label_span_batchno">Batch No: %1$s</string>
    <string name="label_span_category">Category: %1$s</string>
    <string name="label_span_expiry">Expiry: %1$s</string>
    <string name="label_span_description">Description: %1$s</string>
    <string name="label_span_sub">SubCategory: %1$s</string>
    <string name="label_span_manifacture">Manufacture: %1$s</string>
    <string name="label_span_generic">Generic: %1$s</string>
    <string name="label_span_rack">RackId: %1$s</string>
    <string name="label_span_expirydate">Expiry DAte: %1$s</string>
    <string name="label_span_mrp">MRP: %1$s</string>
    <string name="label_span_tax">TAX: %1$s</string>
    <string name="label_span_reqQty">ReqQty: %1$s</string>
    <string name="select_bt_lbl">Search Devices</string>
    <string name="true_stock_status">Completed</string>
    <string name="false_stock_status">Pending</string>
    <string name="label_generic_name"> Name: \n%1$s</string>
    <string name="label_generic_lastName">Last Name: \n%1$s</string>
    <string name="label_generic_age">Age: \n%1$s</string>
    <string name="label_generic_gender"> Gender: \n%1$s</string>
    <string name="label_generic_phone_number"> Phone number: \n%1$s</string>
    <string name="label_generic_phone_no"> Phone No: \n%1$s</string>
    <string name="label_generic_dob"> DOB: \n%1$s</string>
    <string name="label_generic_dob_text"> Date of Birth: \n%1$s</string>
    <string name="label_generic_postal"> Postal Address: \n%1$s</string>
    <string name="label_generic_city"> City: \n%1$s</string>
    <string name="label_generic_State"> State: \n%1$s</string>
    <string name="label_generic_District"> District: \n%1$s</string>
    <string name="label_generic_Zip_Code"> Zip Code: \n%1$s</string>
    <string name="label_generic_Email"> Email: \n%1$s</string>
    <string name="label_generic_Anniversary"> Anniversary: \n%1$s</string>
    <string name="label_generic_Marital_Status"> Marital Status: \n%1$s</string>
    <string name="label_generic_Number_of_Dependents"> Number of Dependents: \n%1$s</string>
    <string name="label_generic_Date_of_Registration"> Date of Registration: \n%1$s</string>
    <string name="label_generic_card_no">Card Number : \n%1$s</string>
    <string name="label_generic_tel">Telephone : \n%1$s</string>
    <string name="label_site_id">Site ID:</string>
    <string name="label_store_address">Store Address:</string>
    <string name="label_cashier">Cashier: %s</string>
    <string name="label_storeCode">StoreCode: %s</string>
    <string name="label_storeName">StoreCode: %s</string>
    <string name="label_storeLocation">StoreLocation: %s</string>
    <string name="label_terminalId">TerminalId %s</string>
    <string name="lebel_item_batch_details_search">ITEM/BATCH DETAILS SEARCH</string>
    <string name="label_intial">INTIAL</string>
    <string name="label_img">img</string>
    <string name="label_generic">GENERIC</string>
    <string name="label_clear_all">Clear All</string>
    <string name="label_s_no">S.No.</string>
    <string name="label_artcode">ARTCODE</string>
    <string name="label_description">DESCRIPTION</string>
    <string name="label_category">CATEGORY</string>
    <string name="label_sub_category">SUB CATEGORY</string>
    <string name="label_sch_catg">SCH_CATG</string>
    <string name="label_manufacture">MANUFACTURE</string>
    <string name="label_rack_id">RACK ID</string>
    <string name="labl_generic_name">GENERIC NAME</string>
    <string name="label_substitute">SUBSTITUTE</string>
    <string name="label_expiry_change">EXPIRY CHANGE</string>
    <string name="labl_s_no">S.No.</string>
    <string name="label_tax">Tax</string>
    <string name="label_q_o_h">QOH</string>
    <string name="label_req">Req. Qty</string>
    <string name="label_phy_batch">Phy.Batch</string>
    <string name="batch_pickup_check">Pickup</string>
    <string name="label_add_to_cart">ADD TO CART</string>
    <string name="label_batchno">BATCHNO.</string>
    <string name="label_searchproduct">SearchProduct</string>
    <string name="label_todo">TODO</string>
    <string name="label_span_disc_type">Disc Type\n%1$s</string>
    <string name="label_span_pharma">Pharma\n%1$s</string>
    <string name="label_span_fmcg">FMCG\n%1$s</string>
    <string name="label_span_pl">PL\n%1$s</string>
    <string name="label_span_net_total">Net Total\n%1$s</string>
    <string name="label_span_rounded_amount">Rounded Amt\n%1$s</string>
    <string name="label_span_mrp_total">MRP Total\n%1$s</string>
    <string name="label_span_taxable_amount">Taxable Amt\n%1$s</string>
    <string name="label_span_tax_amount">Tax Amount\n%1$s</string>
    <string name="label_span_disc_amount">Disc. Amount\n%1$s</string>
    <string name="label_span_savings">Savings\%%\n%1$s</string>
    <string name="label_span_customer_no">Customer No.\n%1$s</string>
    <string name="label_span_customer_name">Customer Name\n%1$s</string>
    <string name="label_span_tracking_ref">Tracking Ref.\n%1$s</string>
    <string name="label_span_mobile_no">Mobile No.\n%1$s</string>
    <string name="label_span_doctor_no">Doctor No.\n%1$s</string>
    <string name="label_span_slaes_origin">Sales Origin\n%1$s</string>
    <string name="label_transaction_id">Transaction ID\n%1$s</string>
    <string name="requied_qty">Required Qty.</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_contact_us">CONTACT US</string>
    <string name="label_e_mail_support_apollo_in">E-mail: support@apollo.in</string>
    <string name="label_call_9855566633">Call:9855566633</string>
    <string name="label_clearall">ClearAll</string>
    <string name="label_search">Search</string>
    <string name="label_register">Register</string>
    <string name="label_first_name">First Name*</string>
    <string name="label_name_custmer">Name*</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_postal_address">Postal Address</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_district">District</string>
    <string name="label_zip_code">Zip Code</string>
    <string name="label_email">Email</string>
    <string name="label_telephone">Telephone</string>
    <string name="label_mobile1">Mobile*</string>
    <string name="label_anniversary">Anniversary</string>
    <string name="label_marital_status">Marital Status</string>
    <string name="label_number_of_dependents">Number of Dependents</string>
    <string name="label_card_number">Card Number*</string>
    <string name="label_date_of_registration">Date of Registration</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_doctor_reg_no">Doctor Reg.No*</string>
    <string name="label_doctor_name">Doctor Name*</string>
    <string name="label_speciality">Speciality*</string>
    <string name="label_place_of_practice">Place of Practice*</string>
    <string name="label_add_address">Address*</string>
    <string name="label_phone_no">Phone No*</string>
    <string name="label_doctor_registration">Doctor Registration</string>
    <string name="label_customer_registration">Customer Registration</string>
    <string name="label_device_registration">Device Registration</string>
    <string name="label_store_setup">Store Setup</string>
    <string name="label_mac_id">Mac id</string>
    <string name="label_pos123">pos123</string>
    <string name="label_sight_registration">Site Registration</string>
    <string name="label_terminal_id">Terminal Id</string>
    <string name="label_select_store">Select Store</string>
    <string name="label_select_store_id">Select Store Id</string>
    <string name="label_sitename">Sitename</string>
    <string name="label_siteaddress">SiteAddress</string>
    <string name="label_dcid">DcId</string>
    <string name="label_dcname">DcName</string>
    <string name="label_selectuser">Select User</string>
    <string name="todo">TODO</string>
    <string name="label_loginoptions">LoginOptions:</string>
    <string name="label_instore">In Store</string>
    <string name="label_select_campaign">Select Campaign</string>
    <string name="label_login">Login</string>
    <string name="label_enter_user_id">Enter User ID</string>
    <string name="label_admin_login">ADMIN LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="label_pharmacist_login">Pharmacist Login</string>
    <string name="label_campaign_name">Campaign Name:</string>
    <string name="label_phone_number_id">Phone Number/ID</string>
    <string name="label_search_by_phone_number">Search by phone number</string>
    <string name="label_search_by_registration_number">Search by registration number</string>
    <string name="label_registration_number_id">Registration Number/ID</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_doct_master">Doct.Master</string>
    <string name="menu_customer_master">Customer Master</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_eprescriptionslict">To Picked</string>
    <string name="menu_eprescriptionPickingList">To Packed</string>
    <string name="menu_eprescriptionPackingList">To Billing</string>
    <string name="menu_manual_billing">Manual Billing</string>
    <string name="menu_connect_barcodeprinter">Barcode Printer</string>
    <string name="menu_exit_kiosk">Exit Kiosk</string>
    <string name="label_continue">Continue</string>
    <string name="label_customer_details">Customer Details</string>
    <string name="label_doctor_details">Doctor Details</string>
    <string name="label_add_items">Add Items</string>
    <string name="label_orders">Orders</string>
    <string name="label_req_qty">req.Qty</string>
    <string name="label_mrp">MRP</string>
    <string name="label_exp_date">Exp.Date</string>
    <string name="label_batch_no">Batch No.</string>
    <string name="label_dashboards">Dashboard</string>
    <string name="label_picker">Picker</string>
    <string name="label_packer">Packer</string>
    <string name="label_biller">Biller</string>
    <string name="label_shipping_label">Shipping Label</string>
    <string name="lanel_admin">Admin</string>
</resources>