<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/label_dashboards"
            android:visible="false" />
        <item
            android:id="@+id/nav_picker_vtwo"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/label_picker" />
        <item
            android:id="@+id/nav_packer_vtwo"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/label_packer" />

        <item
            android:id="@+id/nav_biller_vtwo"
            android:icon="@drawable/ic_menu_billing"
            android:title="@string/label_biller" />
        <item
            android:id="@+id/nav_shipping_label"
            android:icon="@drawable/ic_menu_billing"
            android:title="@string/label_shipping_label" />

        <item
            android:id="@+id/nav_on_hold"
            android:icon="@drawable/ic_menu_billing"
            android:title="@string/lanel_admin" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_billing"
            android:title="@string/label_orders" />
        <!--<item
            android:id="@+id/nav_stock_inward_process"
            android:icon="@drawable/ic_menu_billing"
            android:title="@string/label_stock_inward_process" />-->


        <!--        <item-->
        <!--            android:id="@+id/nav_biller_vtwo"-->
        <!--            android:title="Biller" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_sealer_vtwo"-->
        <!--            android:title="Sealer" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_admin_vtwo"-->
        <!--            android:title="Admin" />-->


        <!--        <item-->
        <!--            android:id="@+id/nav_gallery"-->
        <!--            android:title="@string/gallery" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_slideshow"-->
        <!--            android:title="@string/slideshow" />-->
    </group>
</menu>