<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dash_board">

    <fragment
        android:id="@+id/nav_dash_board"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.dashboard.DashBoardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard"
        app:startDestination="@id/action_nav_dash_board_to_nav_billing2">
        <action
            android:id="@+id/action_nav_dash_board_to_nav_billing2"
            app:destination="@id/nav_billing"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popUpTo="@+id/nav_billing" />
    </fragment>

    <fragment
        android:id="@+id/nav_doc_master"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.docmaster.DoctorMasterFragment"
        android:label="@string/menu_doct_master"
        tools:layout="@layout/fragment_doc_master" />

    <fragment
        android:id="@+id/nav_cust_master"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.customermaster.CustomerMasterFragment"
        android:label="@string/menu_customer_master"
        tools:layout="@layout/fragment_cust_master" />

    <fragment
        android:id="@+id/nav_billing"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.billing.BillingFragment"
        android:label="@string/menu_billing"
        tools:layout="@layout/fragment_billing" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_manual_billing"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.manualbilling.ManualBillingFragment"
        android:label="@string/menu_manual_billing"
        tools:layout="@layout/fragment_manual_billing" />

  <fragment
        android:id="@+id/nav_eprescription"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.eprescriptionslist.EprescriptionslistFragment"
      android:label="@string/menu_eprescriptionslict"
      tools:layout="@layout/fragment_eprescriptionlist" />

    <fragment
        android:id="@+id/nav_Picking"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.eprescriptionslist.EprescriptionslistFragment"
        android:label="@string/menu_eprescriptionPickingList"
        tools:layout="@layout/fragment_eprescriptionlist" />

    <fragment
        android:id="@+id/nav_Packing"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.eprescriptionslist.EprescriptionslistFragment"
        android:label="@string/menu_eprescriptionPackingList"
        tools:layout="@layout/fragment_eprescriptionlist" />

    <!--<fragment
        android:id="@+id/nav_Invoice"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.ui.eprescriptionslist.EprescriptionslistFragment"
        android:label="@string/menu_eprescriptioninvoiceList"
        tools:layout="@layout/fragment_eprescriptionlist" />-->

    <fragment
        android:id="@+id/nav_Invoice"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.home.SearchBTActivity"
        android:label="@string/menu_connect_barcodeprinter"
        tools:layout="@layout/activity_bluetooth_search" />

    <fragment
        android:id="@+id/nav_ePrescription_vOne"
        android:name="com.apollopharmacy.mpospharmacistTest.ui.pbas.ePrescription.EPrescriptionActivity"
        tools:layout="@layout/activity_e_prescription2"
        android:label="EPrescription"/>

</navigation>