<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/batchno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/label_batch_no"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/eight_sp" />

            <TextView
                android:id="@+id/exp_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"

                android:text="@string/label_exp_date"
                android:textColor="@color/black"
                android:textSize="@dimen/eight_sp" />

            <TextView
                android:id="@+id/mrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="center"
                android:text="@string/label_mrp"
                android:fontFamily="@font/roboto_regular"

                android:textColor="@color/black"
                android:textSize="@dimen/eight_sp" />

            <TextView
                android:id="@+id/required_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="center"
                android:text="@string/label_req_qty"
                android:fontFamily="@font/roboto_regular"

                android:textColor="@color/black"
                android:textSize="@dimen/eight_sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>