<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/view_customer_doctor_info" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_add_items"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/text_dimen_16"
                android:fontFamily="@font/roboto_bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_login_password"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_login_password"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_login_password"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_alignParentBottom="true"
            android:alpha="0.3"
            android:background="@color/cpb_yellow"
            android:text="@string/label_continue"
            android:textAllCaps="false"
            android:textSize="@dimen/text_dimen_17"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>
